examples/invalid/no_program_keyword.ctds
Program {
    int sumatory(int x) {
        int ;
        int result = 0;
        while (i < x || i == x && !2) { // Fails: invalid expression '!2'
            result = result + i;
            i = i + 1;
        }
        return result;
    }

    int a = sumatory(20);
}
